[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="aspn23"
description="The Python representation of ASPN-23"
dependencies=["numpy"]
dynamic=["version"]
requires-python = ">= 3.8"

[tool.setuptools.packages.find]
where=["src"]
include=["aspn23*"]
namespaces=false